<resources>
    <string name="app_name">¡Charadas!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logo">¡Charadas!</string>
    <string name="slogan">¡Elige un tema y a jugar!</string>
    <string name="juego_r_pido">Juego rápido</string>
    <string name="crear_borrar">Crear/Borrar</string>
    <string name="pel_culas">Películas</string>
    <string name="personajes">Personajes</string>
    <string name="animales">Animales</string>
    <string name="artistas">Artistas</string>
    <string name="_actualo_">¡Actualo!</string>
    <string name="super_heroes">Super Heroes</string>
    <string name="video_juegos">Video Juegos</string>
    <string name="pa_ses">Países</string>
    <string name="series_de_tv">Series de TV</string>
    <string name="series_para_ni_os">Series para niños</string>
    <string name="como_jugar">Como Jugar</string>
    <string name="configuraci_n">Configuración</string>
    <string name="welcome">Bienvenido</string>
    <string name="welcomeContentDialog">Recomendamos ver el tutorial para saber cómo se juega a ¡Charadas!</string>
    <string name="welcomeContentDialog2">(También puedes saltarlo si ya sabes o verlo después)</string>
    <string name="ya_se_jugar">Ya se jugar</string>
    <string name="ver_tutorial">Ver tutorial</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="timer_text_5">5</string>
    <string name="coloca_el_m_vil_tablet_en_tu_frente">Coloca el móvil/tablet en tu frente</string>
    <string name="txtFirstAboutUsScreen">Esta app fue desarrollada por:</string>
    <string name="txtFirstAboutUsScreen2">Por el equipo de desarrollo móvil.</string>
    <string name="txtFirstAboutUsScreen3">(Desliza hacia la izquierda para ver sorpresas)</string>
    <string name="txtTutorial1_Fragment1">Bienvenido al tutorial de ¡Charadas!\nJugar es muy sencillo y aquí lo verás.\n</string>
    <string name="txtTutorial2_Fragment1">(Desliza hacia la izquierda para leer más)</string>
    <string name="txtTutorial1_Fragment2">Lo primero que tienes que hacer es elegir el tema que más te interese.\nYa que lo hayas hecho pon el móvil o tablet en tu frente.</string>
    <string name="txtTutorial1_Fragment3">Ahora, tu familia o amigos te tienen que dar pistas sobre la palabra que tienes en la frente.
	    \nSi aciertas, tienes que inclinar tu móvil o tablet hacia arriba
	     e inmediatamente escucharás un sonido de confirmación que te indicará que acertaste
	      y automáticamente mostrará otra palabra.</string>
    <string name="txtTutorial1_Fragment4">Si no logras acertar la palabra, tienes que pasar a otra ¡porque el tiempo se agota!\nPara hacerlo, haz lo contrario de acertar, inclina tu móvil o tablet hacia abajo y de igual manera se te confirmará y se pasará a otra palabra.</string>
    <string name="txtTutorial1_Fragment5">¡Y eso es Todo!\nAhora lo que tienes que hacer es divertirte y retar a tus amigos o familia.</string>
    <string-array name="arrayAnimals">
        <item>Abeja</item>
        <item>Ácaro</item>
        <item>Águila</item>
        <item>Alce</item>
        <item>Almeja</item>
        <item>Alpaca</item>
        <item>Araña</item>
        <item>Ardilla</item>
        <item>Avestruz</item>
        <item>Avispa</item>
        <item>Azno</item>
        <item>Babosa</item>
        <item>Ballena</item>
        <item>Buey</item>
        <item>Búho</item>
        <item>Buitre</item>
        <item>Burro</item>
        <item>Caballito de mar</item>
        <item>Caballo</item>
        <item>Cabra</item>
        <item>Caimán</item>
        <item>Calamar</item>
        <item>Camello</item>
        <item>Cangrejo</item>
        <item>Canguro</item>
        <item>Caracol</item>
        <item>Cebra</item>
        <item>Cerdo</item>
        <item>Chimpancé</item>
        <item>Ciempiés</item>
        <item>Ciervo</item>
        <item>Cigüeña</item>
        <item>Cisne</item>
        <item>Cobra</item>
        <item>Lombriz</item>
        <item>Loro</item>
        <item>Peña nieto</item>
        <item>Cocodrilo</item>
        <item>Mono</item>
        <item>Morsa</item>
        <item>Piojo</item>
        <item>Venado</item>
        <item>Pitón</item>
        <item>Murciélago</item>
        <item>León</item>
        <item>Víbora</item>
        <item>Perro</item>
        <item>Gato</item>
        <item>Paloma</item>
        <item>Panda</item>
    </string-array>
    <string-array name="arrayQuickPlay">
        <item>Nelson Mandela</item>
        <item>Ernesto Che Guevara</item>
        <item>Albert Einstein</item>
        <item>Mahatma Gandhi</item>
        <item>Guadalupe Victoria</item>
        <item>Porfirio Díaz</item>
        <item>Isaac Newton</item>
        <item>Madre Teresa de Calcuta</item>
        <item>Cristóbal Colón</item>
        <item>Vladimir Lenin</item>
        <item>Cadena Perpetua</item>
        <item>El padrino</item>
        <item>El caballero oscuro</item>
        <item>Pulp Fiction</item>
        <item>El bueno, el feo y el malo</item>
        <item>La lista de schindler</item>
        <item>Hombres sin piedad</item>
        <item>El señor de los anillos</item>
        <item>The Fight Club</item>
        <item>Star Wars</item>
        <item>Grecia</item>
        <item>Guatemala</item>
        <item>Suecia</item>
        <item>Suiza</item>
        <item>México</item>
        <item>Japón</item>
        <item>Jamaica</item>
        <item>Costa de Marfil</item>
        <item>Estonia</item>
        <item>Reino Unido</item>
        <item>Star Fox</item>
        <item>The Legend of Zelda</item>
        <item>Polybius</item>
        <item>Left 4 Dead</item>
        <item>¡Charadas!</item>
        <item>E.T. the Extra-Terrestrial</item>
        <item>DOTA</item>
        <item>League of Legends</item>
        <item>world of warcraft</item>
        <item>StarCraft</item>
        <item>Pink</item>
        <item>Daft Punk</item>
        <item>Maroon 5</item>
        <item>Pharrell Williams</item>
        <item>The Beatles</item>
        <item>Elvis Presley</item>
        <item>Michael Jackson</item>
        <item>Madonna</item>
        <item>Elton John</item>
        <item>Led Zeppelin</item>
    </string-array>
    <string-array name="arrayMovies">
        <item>Cadena Perpetua</item>
        <item>El padrino</item>
        <item>El caballero oscuro</item>
        <item>Pulp Fiction</item>
        <item>El bueno, el feo y el malo</item>
        <item>La lista de schindler</item>
        <item>Hombres sin piedad</item>
        <item>El señor de los anillos</item>
        <item>The Fight Club</item>
        <item>Star Wars</item>
        <item>Inception</item>
        <item>Forrest Gump</item>
        <item>GoodFellas</item>
        <item>Matrix</item>
        <item>Spider Man</item>
        <item>Crepusculo</item>
        <item>Casablanca</item>
        <item>La vida es bella</item>
        <item>Indiana Jones</item>
        <item>American History X</item>
        <item>City Lights</item>
        <item>Salvando al soldado Ryan</item>
        <item>Terminator</item>
        <item>El pianista</item>
        <item>The Green Mile</item>
        <item>Apocalypse Now</item>
        <item>Gladiador</item>
        <item>Volver al Futuro</item>
        <item>Alien</item>
        <item>Batman</item>
        <item>El Rey León</item>
        <item>American Beauty</item>
        <item>Wall-E</item>
        <item>Amelie</item>
        <item>Ciudadano Kane</item>
        <item>Toy Story</item>
        <item>Taxi Driver</item>
        <item>La naranja mecánica</item>
        <item>Réquiem por un sueño</item>
        <item>Braveheart</item>
        <item>Full Metal Jacket</item>
        <item>Los Dioses deben de estar locos</item>
        <item>Bastardos sin gloria</item>
        <item>El lobo de Wall Street</item>
        <item>Up</item>
        <item>Gran Torino</item>
        <item>12 años de esclavitud</item>
        <item>Gravity</item>
        <item>V de Vendetta</item>
        <item>her</item>
    </string-array>
    <string-array name="arrayCharacters">
        <item>Nelson Mandela</item>
        <item>Ernesto Che Guevara</item>
        <item>Albert Einstein</item>
        <item>Mahatma Gandhi</item>
        <item>Guadalupe Victoria</item>
        <item>Porfirio Díaz</item>
        <item>Isaac Newton</item>
        <item>Madre Teresa de Calcuta</item>
        <item>Cristóbal Colón</item>
        <item>Vladimir Lenin</item>
        <item>Martin Luther King</item>
        <item>Galileo Galilei</item>
        <item>Yosif Stalin</item>
        <item>Mao Tse Tung</item>
        <item>Charles Darwin</item>
        <item>Rosa Luxemburg</item>
        <item>Charles Chaplin</item>
        <item>John Lennon</item>
        <item>Pablo Picasso</item>
        <item>Marie Curie</item>
        <item>Emiliano Zapata</item>
        <item>Benito Juárez</item>
        <item>Aristóteles</item>
        <item>Alexander Fleming</item>
        <item>Louis Pasteur</item>
        <item>Platón</item>
        <item>Sócrates</item>
        <item>Adolf Hitler</item>
        <item>Napoleon Bonaparte</item>
        <item>Arquímedes</item>
        <item>William Shakespeare</item>
        <item>Miguel de Cervantes</item>
        <item>Nicolás Copérnico</item>
        <item>Alejandro Magno</item>
        <item>Winston Churchill</item>
        <item>Walt Disney</item>
        <item>Isabel La Católica</item>
        <item>Pitágoras de Samos</item>
        <item>Jean-Paul Sartre</item>
        <item>Nikola Tesla</item>
        <item>Johannes Gutenberg</item>
        <item>Cleopatra</item>
        <item>José de San Martín</item>
        <item>Thomas Alva Edison</item>
        <item>Friedrich Nietzsche</item>
        <item>Sigmund Freud</item>
        <item>Julio Verne</item>
        <item>Euclides</item>
        <item>Alexander Graham Bell</item>
        <item>Cuauhtémoc</item>
    </string-array>
    <string name="cancelar">Cancelar</string>
    <string name="menu">Menu</string>
    <string name="tiempo_de_la_partida">Tiempo de la partida</string>
    <string name="con_cenos">Conócenos</string>
    <string name="tiempo_de_la_partida_">Tiempo de la partida.</string>
    <string name="aceptar">Aceptar</string>
    <string name="_120_segundos">120 segundos</string>
    <string name="_100_segundos">100 segundos</string>
    <string name="_80_segundos">80 segundos</string>
    <string name="_60_segundos">60 segundos</string>
    <string name="_50_segundos">50 segundos</string>
    <string name="_40_segundos">40 segundos</string>
    <string name="_30_segundos">30 segundos</string>
    <string name="_20_segundos">20 segundos</string>
    <string name="_10_segundos">10 segundos</string>
</resources>