<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background_blue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/tiempo_de_la_partida_"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/white" 
        android:layout_below="@+id/textView1"/>

    <HorizontalScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider" >

        <RadioGroup
            android:id="@+id/rgGameTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_vertical|start"
                android:onClick="onRadioButtonClicked"
                android:text="@string/_10_segundos"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/_20_segundos"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/_30_segundos"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/_40_segundos"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/_50_segundos"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/_60_segundos"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/_80_segundos"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_100"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/_100_segundos"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_120"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/_120_segundos"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />
        </RadioGroup>
    </HorizontalScrollView>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_above="@+id/buttons"
        android:layout_marginRight="5dp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/timeDialogAceptButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@drawable/btn_quickplay"
            android:gravity="center"
            android:text="@string/aceptar"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/timeDialogCancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@drawable/btn_quickplay"
            android:gravity="center"
            android:text="@string/cancelar"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>