<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:orientation="vertical"
    tools:context="com.cafeinelabs.charadas.MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/background_blue" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <!-- Logo and Slogan -->

            <TextView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/logo"
                android:textColor="@color/white"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/slogan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/slogan"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <!-- Layout buttons -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnQuickPlay"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_quickplay"
                    android:drawableTop="@drawable/icon_shake"
                    android:padding="10dp"
                    android:text="@string/juego_r_pido"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnCreate_delete"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_create"
                    android:drawableTop="@drawable/icon_create"
                    android:padding="10dp"
                    android:text="@string/crear_borrar"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnMovies"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_movies"
                    android:drawableTop="@drawable/icon_movies"
                    android:padding="10dp"
                    android:text="@string/pel_culas"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnCharacters"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_persons"
                    android:drawableTop="@drawable/icon_persons"
                    android:padding="10dp"
                    android:text="@string/personajes"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnVideoGames"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_games"
                    android:drawableTop="@drawable/icon_games"
                    android:padding="10dp"
                    android:text="@string/video_juegos"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnCountries"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_countries"
                    android:drawableTop="@drawable/icon_countries"
                    android:padding="10dp"
                    android:text="@string/pa_ses"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnAnimals"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_animals"
                    android:drawableTop="@drawable/icon_animals"
                    android:padding="10dp"
                    android:text="@string/animales"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnArtists"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_artists"
                    android:drawableTop="@drawable/icon_artists"
                    android:padding="10dp"
                    android:text="@string/artistas"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnAct"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_actitout"
                    android:drawableTop="@drawable/icon_actitout"
                    android:padding="10dp"
                    android:text="@string/_actualo_"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnSuperHeroes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_superheroes"
                    android:drawableTop="@drawable/icon_superheroes"
                    android:padding="10dp"
                    android:text="@string/super_heroes"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnTvShows"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_tvshows"
                    android:drawableTop="@drawable/icon_tvshows"
                    android:padding="10dp"
                    android:text="@string/series_de_tv"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnTvShowsForKids"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_kidsshows"
                    android:drawableTop="@drawable/icon_kidsshows"
                    android:padding="10dp"
                    android:text="@string/series_para_ni_os"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnHowToPlay"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_test"
                    android:drawableTop="@drawable/icon_howtoplay"
                    android:padding="10dp"
                    android:text="@string/como_jugar"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnConfiguration"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_configuration"
                    android:drawableTop="@drawable/icon_configuration"
                    android:padding="10dp"
                    android:text="@string/configuraci_n"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>