<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/configurationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textSize="35sp"
        android:text="@string/configuraci_n"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/configurationTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/configurationText"
        android:layout_margin="5dp"
        android:layout_marginTop="74dp"
        android:background="@drawable/btn_quickplay"
        android:gravity="center"
        android:text="@string/tiempo_de_la_partida"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/aboutUsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/configurationTimeButton"
        android:layout_marginBottom="44dp"
        android:background="@drawable/btn_quickplay"
        android:gravity="center"
        android:text="@string/con_cenos"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/backMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="@drawable/btn_quickplay"
        android:text="@string/menu"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>